--- a/apps/k-maps/src/app/features/arabic/lessons/ar-lessons-page/ar-lessons-page.component.html
+++ b/apps/k-maps/src/app/features/arabic/lessons/ar-lessons-page/ar-lessons-page.component.html
@@ -4,7 +4,7 @@
       <app-headerbar
         class="lessons-toolbar"
         [title]="'Arabic Lessons'"
-        [showTitle]="true"
+        [showTitle]="false"
         [showSearch]="true"
         [placeholder]="'Search title or source'"
         [value]="q"
