--- a/apps/k-maps/src/app/features/arabic/roots/roots/roots.component.html
+++ b/apps/k-maps/src/app/features/arabic/roots/roots/roots.component.html
@@ -1,8 +1,7 @@
 <div class="roots-page">
   <app-headerbar
     class="roots-toolbar"
-    [title]="'All Roots'"
-    [showTitle]="true"
+    [showTitle]="false"
     [showSearch]="true"
     [placeholder]="'Search root'"
     [value]="q"
