--- a/apps/k-maps/src/app/shared/components/common/core-ui/app-headerbar/app-headerbar.component.scss
+++ b/apps/k-maps/src/app/shared/components/common/core-ui/app-headerbar/app-headerbar.component.scss
@@ -64,7 +64,30 @@
   flex-wrap: wrap;
 }
 
+.app-headerbar-select-wrap,
+.app-page-size-item {
+  position: relative;
+}
+
+.app-headerbar-select-wrap::after,
+.app-page-size-item::after {
+  content: '';
+  position: absolute;
+  right: 0.95rem;
+  top: 50%;
+  transform: translateY(-45%);
+  width: 0;
+  height: 0;
+  border-left: 0.35rem solid transparent;
+  border-right: 0.35rem solid transparent;
+  border-top: 0.42rem solid var(--km-core-text-muted, rgba(184, 200, 230, 0.86));
+  pointer-events: none;
+}
+
 .app-headerbar-select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   min-width: 170px;
   height: 50px;
   border-radius: 12px;
@@ -73,7 +96,7 @@
   color: var(--km-core-text, rgba(241, 246, 255, 0.95));
   font-weight: 600;
   font-size: 0.92rem;
-  padding-inline: 0.8rem 2rem;
+  padding-inline: 0.8rem 2.1rem;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
 }
 
@@ -127,8 +150,11 @@
 
 .app-page-size-select {
   appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   font-size: 0.84rem;
   font-weight: 700;
+  padding-inline-end: 1.7rem;
 }
 
 .app-page-size-select:focus {
@@ -164,6 +190,10 @@
     min-width: 0;
     width: 100%;
     height: 46px;
+  }
+
+  .app-headerbar-select-wrap {
+    width: 100%;
   }
 
   .app-headerbar-pager {
