--- a/apps/k-maps/src/components/docs-components/docs-components.component.html
+++ b/apps/k-maps/src/components/docs-components/docs-components.component.html
@@ -6,6 +6,7 @@
         ngSrc="./assets/images/components.webp"
         width="160"
         height="160"
+        priority
         alt="CoreUI PRO hexagon"
       />
     </div>
