--- a/apps/k-maps/src/app/features/arabic/grammar/examples/grammar-examples.component.scss
+++ b/apps/k-maps/src/app/features/arabic/grammar/examples/grammar-examples.component.scss
@@ -37,7 +37,6 @@
 }
 
 .example-ar {
-  font-family: var(--app-font-ar);
   font-size: 1.15rem;
 }
 
@@ -120,4 +119,8 @@
 
 .form-span {
   grid-column: 1 / -1;
+}
+
+.arabic-input {
+  font-size: 1rem;
 }
