--- a/apps/k-maps/src/app/features/arabic/quran/data/lemma-locations/quran-lemma-locations.component.html
+++ b/apps/k-maps/src/app/features/arabic/quran/data/lemma-locations/quran-lemma-locations.component.html
@@ -45,4 +45,14 @@
     [showEditAction]="false"
     [showStudyAction]="false"
   ></app-crud-table>
+
+  <app-headerbar
+    *ngIf="!loading"
+    class="quran-lemma-locations-footer"
+    [showTitle]="false"
+    [showSearch]="false"
+    [pagination]="pagination"
+    (pageChange)="onHeaderPageChange($event)"
+    (pageSizeChange)="onHeaderPageSizeChange($event)"
+  />
 </div>
