--- a/apps/k-maps/src/app/features/arabic/quran/data/lemmas/quran-lemmas.component.html
+++ b/apps/k-maps/src/app/features/arabic/quran/data/lemmas/quran-lemmas.component.html
@@ -28,4 +28,14 @@
     [actions]="actions"
     (action)="onAction($event)"
   ></app-crud-table>
+
+  <app-headerbar
+    *ngIf="!loading"
+    class="quran-lemmas-footer"
+    [showTitle]="false"
+    [showSearch]="false"
+    [pagination]="pagination"
+    (pageChange)="onHeaderPageChange($event)"
+    (pageSizeChange)="onHeaderPageSizeChange($event)"
+  />
 </div>
